# voxel

./: Cargo.toml  README.md
assets/: chunk.wgsl
src/: main.rs
src/chunk/: chunk.rs  discovery.rs  event.rs  generation.rs  linearization.rs  mesh.rs  mod.rs  registry.rs  voxel.rs
src/chunk/events/: discovery.rs  draw.rs  gen.rs  mesh.rs  mod.rs
src/chunk/events/discovery/: mod.rs  processing.rs  query.rs
src/chunk/loading/: discovery.rs  draw.rs  generation.rs  mod.rs  unload.rs
src/input/: camera.rs  cursor.rs  mod.rs
src/terrain/: mod.rs
src/ui/: mod.rs
src/util/: coordinates.rs  frustum.rs  mod.rs  spiral.rs  task.rs
src/world/: mod.rs  sky.rs
