[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["trace"] }
bevy-inspector-egui = "0.19.0"
bevy_asset = "0.11.0"
bevy_egui = "0.21.0"
bevy_reflect = "0.11.0"
bevy_render = "0.11.0"
bevy_tasks = "0.11.0"
bevy_window = "0.11.0"
egui = "0.22.0"
egui_dock = "0.6.3"
futures-lite = "1.13.0"
num = "0.4.1"
smooth-bevy-cameras = "0.9.0"
