[package]
name = "voxels"
version = "0.1.0"
edition = "2021"
author = "Riven Zondervan <nosequel@protonmail.com>"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[dependencies]
# bevy-specific crates and dependencies
bevy-inspector-egui = "0.19.0"
bevy_reflect = "0.11.0"
bevy_tasks = "0.11.0"
bevy_window = "0.11.0"
smooth-bevy-cameras = "0.9.0"

# egui-specific crates
egui = "0.22.0"
egui_dock = "0.6.3"
bevy_egui = "0.21.0"

# async crates
futures-lite = "1.13.0"
parking_lot = "0.12.1"
once_cell = "1.18.0"

# noise generation
noise = "0.8.2"
rand = "0.8.5" # we're only really using this for noise generation
rayon = "1.7.0"
dynqueue = "0.3.0"
crossbeam = "0.8.2"
crossbeam-queue = "0.3.8"

[dependencies.bevy]
version = "0.11.0"
features = [
  "bevy_pbr", 
  "multi-threaded", 
  # "dynamic_linking"
]
